--- a/data-processor/small_tests.ipynb
+++ b/data-processor/small_tests.ipynb
@@ -2,14 +2,243 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9d5ccc5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of                      Patient ID Hospital ID                 Hospital Name  \\\n",
+       "Visit ID                                                                    \n",
+       "HOSP-1-20240210-0001  PAT-00001      HOSP-1  Springfield General Hospital   \n",
+       "HOSP-3-20241128-0001  PAT-00002      HOSP-3  Northside Community Hospital   \n",
+       "HOSP-3-20240930-0002  PAT-00003      HOSP-3  Northside Community Hospital   \n",
+       "HOSP-2-20240227-0001  PAT-00004      HOSP-2      Riverside Medical Center   \n",
+       "HOSP-1-20240306-0002  PAT-00005      HOSP-1  Springfield General Hospital   \n",
+       "...                         ...         ...                           ...   \n",
+       "HOSP-5-20241212-0989  PAT-04996      HOSP-5          Summit Health Center   \n",
+       "HOSP-4-20240630-0995  PAT-04997      HOSP-4    St. Mary’s Regional Health   \n",
+       "HOSP-2-20240213-1022  PAT-04998      HOSP-2      Riverside Medical Center   \n",
+       "HOSP-2-20240828-1023  PAT-04999      HOSP-2      Riverside Medical Center   \n",
+       "HOSP-1-20240825-0994  PAT-05000      HOSP-1  Springfield General Hospital   \n",
+       "\n",
+       "                     Region           Visit Date Day of Week  Season  \\\n",
+       "Visit ID                                                               \n",
+       "HOSP-1-20240210-0001  Urban  2024-02-10 20:20:56    Saturday  Winter   \n",
+       "HOSP-3-20241128-0001  Rural  2024-11-28 02:07:47    Thursday    Fall   \n",
+       "HOSP-3-20240930-0002  Rural  2024-09-30 04:02:28      Monday    Fall   \n",
+       "HOSP-2-20240227-0001  Urban  2024-02-27 00:31:13     Tuesday  Winter   \n",
+       "HOSP-1-20240306-0002  Urban  2024-03-06 16:52:26   Wednesday  Spring   \n",
+       "...                     ...                  ...         ...     ...   \n",
+       "HOSP-5-20241212-0989  Urban  2024-12-12 04:29:36    Thursday  Winter   \n",
+       "HOSP-4-20240630-0995  Rural  2024-06-30 22:44:17      Sunday  Summer   \n",
+       "HOSP-2-20240213-1022  Urban  2024-02-13 21:06:17     Tuesday  Winter   \n",
+       "HOSP-2-20240828-1023  Urban  2024-08-28 03:11:51   Wednesday  Summer   \n",
+       "HOSP-1-20240825-0994  Urban  2024-08-25 23:05:40      Sunday  Summer   \n",
+       "\n",
+       "                       Time of Day Urgency Level  Nurse-to-Patient Ratio  \\\n",
+       "Visit ID                                                                   \n",
+       "HOSP-1-20240210-0001  Late Morning        Medium                       4   \n",
+       "HOSP-3-20241128-0001       Evening        Medium                       4   \n",
+       "HOSP-3-20240930-0002       Evening           Low                       5   \n",
+       "HOSP-2-20240227-0001       Evening          High                       4   \n",
+       "HOSP-1-20240306-0002     Afternoon           Low                       4   \n",
+       "...                            ...           ...                     ...   \n",
+       "HOSP-5-20241212-0989       Evening      Critical                       2   \n",
+       "HOSP-4-20240630-0995       Evening        Medium                       4   \n",
+       "HOSP-2-20240213-1022     Afternoon        Medium                       3   \n",
+       "HOSP-2-20240828-1023     Afternoon           Low                       5   \n",
+       "HOSP-1-20240825-0994       Evening        Medium                       4   \n",
+       "\n",
+       "                      Specialist Availability  Facility Size (Beds)  \\\n",
+       "Visit ID                                                              \n",
+       "HOSP-1-20240210-0001                        3                    92   \n",
+       "HOSP-3-20241128-0001                        0                    38   \n",
+       "HOSP-3-20240930-0002                        1                    38   \n",
+       "HOSP-2-20240227-0001                        5                    94   \n",
+       "HOSP-1-20240306-0002                        8                    74   \n",
+       "...                                       ...                   ...   \n",
+       "HOSP-5-20241212-0989                        1                   142   \n",
+       "HOSP-4-20240630-0995                        0                    19   \n",
+       "HOSP-2-20240213-1022                        7                   163   \n",
+       "HOSP-2-20240828-1023                        4                   160   \n",
+       "HOSP-1-20240825-0994                        6                   176   \n",
+       "\n",
+       "                      Time to Registration (min)  Time to Triage (min)  \\\n",
+       "Visit ID                                                                 \n",
+       "HOSP-1-20240210-0001                          17                    22   \n",
+       "HOSP-3-20241128-0001                           9                    30   \n",
+       "HOSP-3-20240930-0002                          38                    40   \n",
+       "HOSP-2-20240227-0001                           8                    16   \n",
+       "HOSP-1-20240306-0002                          26                    29   \n",
+       "...                                          ...                   ...   \n",
+       "HOSP-5-20241212-0989                           6                    10   \n",
+       "HOSP-4-20240630-0995                           7                    23   \n",
+       "HOSP-2-20240213-1022                          14                    29   \n",
+       "HOSP-2-20240828-1023                          21                    35   \n",
+       "HOSP-1-20240825-0994                          20                    22   \n",
+       "\n",
+       "                      Time to Medical Professional (min)  \\\n",
+       "Visit ID                                                   \n",
+       "HOSP-1-20240210-0001                                  66   \n",
+       "HOSP-3-20241128-0001                                  30   \n",
+       "HOSP-3-20240930-0002                                 125   \n",
+       "HOSP-2-20240227-0001                                  64   \n",
+       "HOSP-1-20240306-0002                                  63   \n",
+       "...                                                  ...   \n",
+       "HOSP-5-20241212-0989                                  19   \n",
+       "HOSP-4-20240630-0995                                  40   \n",
+       "HOSP-2-20240213-1022                                  87   \n",
+       "HOSP-2-20240828-1023                                  73   \n",
+       "HOSP-1-20240825-0994                                  77   \n",
+       "\n",
+       "                      Total Wait Time (min)          Patient Outcome  \\\n",
+       "Visit ID                                                               \n",
+       "HOSP-1-20240210-0001                    105               Discharged   \n",
+       "HOSP-3-20241128-0001                     69               Discharged   \n",
+       "HOSP-3-20240930-0002                    203               Discharged   \n",
+       "HOSP-2-20240227-0001                     88               Discharged   \n",
+       "HOSP-1-20240306-0002                    118               Discharged   \n",
+       "...                                     ...                      ...   \n",
+       "HOSP-5-20241212-0989                     35               Discharged   \n",
+       "HOSP-4-20240630-0995                     70               Discharged   \n",
+       "HOSP-2-20240213-1022                    130               Discharged   \n",
+       "HOSP-2-20240828-1023                    129  Left Without Being Seen   \n",
+       "HOSP-1-20240825-0994                    119               Discharged   \n",
+       "\n",
+       "                      Patient Satisfaction  \n",
+       "Visit ID                                    \n",
+       "HOSP-1-20240210-0001                     1  \n",
+       "HOSP-3-20241128-0001                     3  \n",
+       "HOSP-3-20240930-0002                     1  \n",
+       "HOSP-2-20240227-0001                     2  \n",
+       "HOSP-1-20240306-0002                     1  \n",
+       "...                                    ...  \n",
+       "HOSP-5-20241212-0989                     3  \n",
+       "HOSP-4-20240630-0995                     3  \n",
+       "HOSP-2-20240213-1022                     1  \n",
+       "HOSP-2-20240828-1023                     1  \n",
+       "HOSP-1-20240825-0994                     1  \n",
+       "\n",
+       "[5000 rows x 18 columns]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(r\"C:\\Users\\sorin.creanga\\Desktop\\Medcare\\base-data\\ER Wait Time Dataset.csv\", index_col=0)\n",
-    "df.head()"
+    "df.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d95a599",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 71\u001b[0m\n\u001b[0;32m     65\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[0;32m     67\u001b[0m     df\u001b[38;5;241m.\u001b[39mhead\n\u001b[1;32m---> 71\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mgenerate_synthetic_data(\u001b[38;5;241m3000\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def generate_synthetic_data(n_samples=5000): # artificial realistic ED data\n",
+    " \n",
+    "    np.random.seed(42)\n",
+    "    \n",
+    "    # realistic data distributions\n",
+    "    health_levels = ['RESUSCITATION', 'EMERGENT', 'URGENT', 'SEMI_URGENT', 'NON_URGENT']\n",
+    "    health_probabilities = [0.05, 0.15, 0.30, 0.35, 0.15] \n",
+    "    \n",
+    "    complaints = [\n",
+    "        'Chest Pain', 'Fever', 'Broken Arm', 'Headache', 'Breathing Issues',\n",
+    "        'Stomach Pain', 'Back Pain', 'Dizziness', 'Nausea', 'Laceration',\n",
+    "        'Allergic Reaction', 'Anxiety', 'Fracture', 'Burns', 'Syncope'\n",
+    "    ]\n",
+    "    \n",
+    "    dispositions = ['Admitted', 'Discharged', 'AMA', 'Transferred', 'Observation']\n",
+    "    disposition_probs = [0.30, 0.60, 0.05, 0.03, 0.02]\n",
+    "    \n",
+    "    \n",
+    "    data = {\n",
+    "        'patient_id': range(1, n_samples + 1),\n",
+    "        'anonymousId': [f'PT-{i:05d}' for i in range(1, n_samples + 1)],\n",
+    "        \n",
+    "        # arrival times with realistic patterns (busier in morning/evening)\n",
+    "        'arrival_time': [\n",
+    "            datetime.now() - timedelta(\n",
+    "                hours=np.random.exponential(scale=12),\n",
+    "                minutes=np.random.randint(0, 60)\n",
+    "            ) for _ in range(n_samples)\n",
+    "        ],\n",
+    "        \n",
+    "    \n",
+    "        'triage': np.random.choice(health_levels, n_samples, p=health_probabilities),\n",
+    "        \n",
+    "       \n",
+    "        'complaint': np.random.choice(complaints, n_samples),\n",
+    "        \n",
+    "        \n",
+    "        'wait_time_minutes': np.random.exponential(scale=45, size=n_samples),\n",
+    "        \n",
+    "        \n",
+    "        'door_to_doctor_minutes': np.random.exponential(scale=60, size=n_samples),\n",
+    "        \n",
+    "        \n",
+    "        'length_of_stay_minutes': np.random.exponential(scale=120, size=n_samples),\n",
+    "        \n",
+    "       \n",
+    "        'left_without_seen': np.random.binomial(1, 0.06, n_samples),\n",
+    "        \n",
+    "        \n",
+    "        'discharge_disposition': np.random.choice(\n",
+    "            dispositions, n_samples, p=disposition_probs\n",
+    "        ),\n",
+    "        \n",
+    "        \n",
+    "        'patient_age': np.random.gamma(shape=2, scale=25, size=n_samples).astype(int) + 5,\n",
+    "        \n",
+    "        \n",
+    "        'gender': np.random.choice(['M', 'F'], n_samples, p=[0.48, 0.52]),\n",
+    "    }\n",
+    "    \n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0163f0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [2,7,11,15]\n",
+    "target = 9\n",
+    "\n",
+    "for i in nums:\n",
+    "    "
    ]
   }
  ],
