Testing some generator data

--- a/data-processor/small_tests.ipynb
+++ b/data-processor/small_tests.ipynb
@@ -1,134 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "45e36008",
+   "metadata": {},
+   "source": [
+    "File to test dataframe implementations and read initial core data.\n",
+    "As the data was generated in an artificial way, this saved us some time on cleaning and sorting data, which is irrelevant to this specific project."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d5ccc5d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.info of                      Patient ID Hospital ID                 Hospital Name  \\\n",
-       "Visit ID                                                                    \n",
-       "HOSP-1-20240210-0001  PAT-00001      HOSP-1  Springfield General Hospital   \n",
-       "HOSP-3-20241128-0001  PAT-00002      HOSP-3  Northside Community Hospital   \n",
-       "HOSP-3-20240930-0002  PAT-00003      HOSP-3  Northside Community Hospital   \n",
-       "HOSP-2-20240227-0001  PAT-00004      HOSP-2      Riverside Medical Center   \n",
-       "HOSP-1-20240306-0002  PAT-00005      HOSP-1  Springfield General Hospital   \n",
-       "...                         ...         ...                           ...   \n",
-       "HOSP-5-20241212-0989  PAT-04996      HOSP-5          Summit Health Center   \n",
-       "HOSP-4-20240630-0995  PAT-04997      HOSP-4    St. Mary’s Regional Health   \n",
-       "HOSP-2-20240213-1022  PAT-04998      HOSP-2      Riverside Medical Center   \n",
-       "HOSP-2-20240828-1023  PAT-04999      HOSP-2      Riverside Medical Center   \n",
-       "HOSP-1-20240825-0994  PAT-05000      HOSP-1  Springfield General Hospital   \n",
-       "\n",
-       "                     Region           Visit Date Day of Week  Season  \\\n",
-       "Visit ID                                                               \n",
-       "HOSP-1-20240210-0001  Urban  2024-02-10 20:20:56    Saturday  Winter   \n",
-       "HOSP-3-20241128-0001  Rural  2024-11-28 02:07:47    Thursday    Fall   \n",
-       "HOSP-3-20240930-0002  Rural  2024-09-30 04:02:28      Monday    Fall   \n",
-       "HOSP-2-20240227-0001  Urban  2024-02-27 00:31:13     Tuesday  Winter   \n",
-       "HOSP-1-20240306-0002  Urban  2024-03-06 16:52:26   Wednesday  Spring   \n",
-       "...                     ...                  ...         ...     ...   \n",
-       "HOSP-5-20241212-0989  Urban  2024-12-12 04:29:36    Thursday  Winter   \n",
-       "HOSP-4-20240630-0995  Rural  2024-06-30 22:44:17      Sunday  Summer   \n",
-       "HOSP-2-20240213-1022  Urban  2024-02-13 21:06:17     Tuesday  Winter   \n",
-       "HOSP-2-20240828-1023  Urban  2024-08-28 03:11:51   Wednesday  Summer   \n",
-       "HOSP-1-20240825-0994  Urban  2024-08-25 23:05:40      Sunday  Summer   \n",
-       "\n",
-       "                       Time of Day Urgency Level  Nurse-to-Patient Ratio  \\\n",
-       "Visit ID                                                                   \n",
-       "HOSP-1-20240210-0001  Late Morning        Medium                       4   \n",
-       "HOSP-3-20241128-0001       Evening        Medium                       4   \n",
-       "HOSP-3-20240930-0002       Evening           Low                       5   \n",
-       "HOSP-2-20240227-0001       Evening          High                       4   \n",
-       "HOSP-1-20240306-0002     Afternoon           Low                       4   \n",
-       "...                            ...           ...                     ...   \n",
-       "HOSP-5-20241212-0989       Evening      Critical                       2   \n",
-       "HOSP-4-20240630-0995       Evening        Medium                       4   \n",
-       "HOSP-2-20240213-1022     Afternoon        Medium                       3   \n",
-       "HOSP-2-20240828-1023     Afternoon           Low                       5   \n",
-       "HOSP-1-20240825-0994       Evening        Medium                       4   \n",
-       "\n",
-       "                      Specialist Availability  Facility Size (Beds)  \\\n",
-       "Visit ID                                                              \n",
-       "HOSP-1-20240210-0001                        3                    92   \n",
-       "HOSP-3-20241128-0001                        0                    38   \n",
-       "HOSP-3-20240930-0002                        1                    38   \n",
-       "HOSP-2-20240227-0001                        5                    94   \n",
-       "HOSP-1-20240306-0002                        8                    74   \n",
-       "...                                       ...                   ...   \n",
-       "HOSP-5-20241212-0989                        1                   142   \n",
-       "HOSP-4-20240630-0995                        0                    19   \n",
-       "HOSP-2-20240213-1022                        7                   163   \n",
-       "HOSP-2-20240828-1023                        4                   160   \n",
-       "HOSP-1-20240825-0994                        6                   176   \n",
-       "\n",
-       "                      Time to Registration (min)  Time to Triage (min)  \\\n",
-       "Visit ID                                                                 \n",
-       "HOSP-1-20240210-0001                          17                    22   \n",
-       "HOSP-3-20241128-0001                           9                    30   \n",
-       "HOSP-3-20240930-0002                          38                    40   \n",
-       "HOSP-2-20240227-0001                           8                    16   \n",
-       "HOSP-1-20240306-0002                          26                    29   \n",
-       "...                                          ...                   ...   \n",
-       "HOSP-5-20241212-0989                           6                    10   \n",
-       "HOSP-4-20240630-0995                           7                    23   \n",
-       "HOSP-2-20240213-1022                          14                    29   \n",
-       "HOSP-2-20240828-1023                          21                    35   \n",
-       "HOSP-1-20240825-0994                          20                    22   \n",
-       "\n",
-       "                      Time to Medical Professional (min)  \\\n",
-       "Visit ID                                                   \n",
-       "HOSP-1-20240210-0001                                  66   \n",
-       "HOSP-3-20241128-0001                                  30   \n",
-       "HOSP-3-20240930-0002                                 125   \n",
-       "HOSP-2-20240227-0001                                  64   \n",
-       "HOSP-1-20240306-0002                                  63   \n",
-       "...                                                  ...   \n",
-       "HOSP-5-20241212-0989                                  19   \n",
-       "HOSP-4-20240630-0995                                  40   \n",
-       "HOSP-2-20240213-1022                                  87   \n",
-       "HOSP-2-20240828-1023                                  73   \n",
-       "HOSP-1-20240825-0994                                  77   \n",
-       "\n",
-       "                      Total Wait Time (min)          Patient Outcome  \\\n",
-       "Visit ID                                                               \n",
-       "HOSP-1-20240210-0001                    105               Discharged   \n",
-       "HOSP-3-20241128-0001                     69               Discharged   \n",
-       "HOSP-3-20240930-0002                    203               Discharged   \n",
-       "HOSP-2-20240227-0001                     88               Discharged   \n",
-       "HOSP-1-20240306-0002                    118               Discharged   \n",
-       "...                                     ...                      ...   \n",
-       "HOSP-5-20241212-0989                     35               Discharged   \n",
-       "HOSP-4-20240630-0995                     70               Discharged   \n",
-       "HOSP-2-20240213-1022                    130               Discharged   \n",
-       "HOSP-2-20240828-1023                    129  Left Without Being Seen   \n",
-       "HOSP-1-20240825-0994                    119               Discharged   \n",
-       "\n",
-       "                      Patient Satisfaction  \n",
-       "Visit ID                                    \n",
-       "HOSP-1-20240210-0001                     1  \n",
-       "HOSP-3-20241128-0001                     3  \n",
-       "HOSP-3-20240930-0002                     1  \n",
-       "HOSP-2-20240227-0001                     2  \n",
-       "HOSP-1-20240306-0002                     1  \n",
-       "...                                    ...  \n",
-       "HOSP-5-20241212-0989                     3  \n",
-       "HOSP-4-20240630-0995                     3  \n",
-       "HOSP-2-20240213-1022                     1  \n",
-       "HOSP-2-20240828-1023                     1  \n",
-       "HOSP-1-20240825-0994                     1  \n",
-       "\n",
-       "[5000 rows x 18 columns]>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(r\"C:\\Users\\sorin.creanga\\Desktop\\Medcare\\base-data\\ER Wait Time Dataset.csv\", index_col=0)\n",
@@ -140,19 +26,7 @@
    "execution_count": null,
    "id": "0d95a599",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 71\u001b[0m\n\u001b[0;32m     65\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[0;32m     67\u001b[0m     df\u001b[38;5;241m.\u001b[39mhead\n\u001b[1;32m---> 71\u001b[0m \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mgenerate_synthetic_data(\u001b[38;5;241m3000\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -216,29 +90,57 @@
     "        \n",
     "        \n",
     "        'gender': np.random.choice(['M', 'F'], n_samples, p=[0.48, 0.52]),\n",
+    "        \n",
+    "\n",
     "    }\n",
-    "    \n",
-    "    df = pd.DataFrame(data)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return pd.DataFrame(data)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0163f0a7",
+   "execution_count": 7,
+   "id": "ac9f4f11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   patient_id anonymousId               arrival_time       triage  \\\n",
+      "0           1    PT-00001 2025-11-22 03:48:07.859566  SEMI_URGENT   \n",
+      "1           2    PT-00002 2025-11-22 07:21:05.825666       URGENT   \n",
+      "2           3    PT-00003 2025-11-21 22:18:41.122730  SEMI_URGENT   \n",
+      "3           4    PT-00004 2025-11-22 02:26:59.767155       URGENT   \n",
+      "4           5    PT-00005 2025-11-22 08:47:55.206249  SEMI_URGENT   \n",
+      "\n",
+      "      complaint  wait_time_minutes  door_to_doctor_minutes  \\\n",
+      "0  Stomach Pain          16.925223               93.811388   \n",
+      "1       Anxiety          43.607272                8.600574   \n",
+      "2    Laceration          45.768535               22.314017   \n",
+      "3     Back Pain          54.086582               57.383975   \n",
+      "4         Burns           5.345853               70.455397   \n",
+      "\n",
+      "   length_of_stay_minutes  left_without_seen discharge_disposition  \\\n",
+      "0               15.791645                  0            Discharged   \n",
+      "1               79.968154                  0              Admitted   \n",
+      "2              117.768989                  0            Discharged   \n",
+      "3              210.802431                  0              Admitted   \n",
+      "4              136.226719                  0              Admitted   \n",
+      "\n",
+      "   patient_age gender  \n",
+      "0           22      F  \n",
+      "1           42      F  \n",
+      "2           39      F  \n",
+      "3           19      F  \n",
+      "4           27      F  \n"
+     ]
+    }
+   ],
    "source": [
-    "nums = [2,7,11,15]\n",
-    "target = 9\n",
+    "# Testing some data from the Dataframe\n",
     "\n",
-    "for i in nums:\n",
-    "    "
+    "print(generate_synthetic_data(2000).head())"
    ]
   }
  ],
